[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/pong.gd" type="Script" id=1]
[ext_resource path="res://assets/left_pallete.png" type="Texture" id=2]
[ext_resource path="res://assets/right_pallete.png" type="Texture" id=3]
[ext_resource path="res://assets/separator.png" type="Texture" id=4]
[ext_resource path="res://assets/ball.png" type="Texture" id=5]
[ext_resource path="res://sfx/impact.ogg" type="AudioStream" id=6]
[ext_resource path="res://sfx/roof_floor_Impact.ogg" type="AudioStream" id=7]
[ext_resource path="res://sfx/lose.ogg" type="AudioStream" id=8]
[ext_resource path="res://sfx/eisenfunk_Pong.ogg" type="AudioStream" id=9]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="paddleL" type="Sprite" parent="."]

transform/pos = Vector2( 67, 183 )
texture = ExtResource( 2 )

[node name="paddleR" type="Sprite" parent="."]

transform/pos = Vector2( 577, 187 )
texture = ExtResource( 3 )

[node name="separator" type="Sprite" parent="."]

transform/pos = Vector2( 320, 200 )
texture = ExtResource( 4 )

[node name="ball" type="Sprite" parent="."]

transform/pos = Vector2( 320, 188 )
texture = ExtResource( 5 )

[node name="placarL" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 260.0
margin/top = 15.0
margin/right = 300.0
margin/bottom = 29.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="placarR" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 360.0
margin/top = 15.0
margin/right = 400.0
margin/bottom = 29.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="alert" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
size_flags/stretch_ratio = 63.0
margin/left = -228.0
margin/top = -148.0
margin/right = -354.0
margin/bottom = -162.0
text = "Press Space to Start"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="impact" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="roof_floor_impact" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="lose" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="pong" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500


